<resources>
    <string name="app_name">Realestate Evaluator 11-30</string>
    <string name="enter">Enter</string>
    <string name="see_results">See Results</string>
    <string name="Address">Address</string>
    <string name="Value">Value</string>
    <string name="rent">Rent</string>
    <string name="see_address">See Address</string>
    <string name="delete_data">Delete Data</string>
    <string name="add_to_database">Add to Database</string>
    <string name="name">Name</string>
    <string name="add_property_one">Add Property 1</string>
    <string name="add_property_2">Add Property 2</string>
    <string name="to_results_page">To Results Page</string>
    <string name="word">word</string>
    <string name="test_word">Test Word</string>
    <string name="title">title</string>
    <string name="add_property_details">Add Property Details</string>
    <string name="renovation_budget">Renovation Budget</string>
    <string name="total_monthly_rent">Total Monthly Rent</string>
    <string name="expense_ratio_65_average">Expense Ratio (.65 average)</string>
    <string name="neighborhood_cap_rate_08">Neighborhood Cap Rate (.08)</string>
    <string name="add_property">Add Property</string>
</resources>