<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dataEntryViewModel"
            type="com.example.realestateevaluator11_30.dataentry.DataEntryViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".dataentry.DataEntryFragment" >

        <Button
            android:id="@+id/to_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_results_page"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_display" />

        <TextView
            android:id="@+id/address_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_prop_to_database" />

        <Button
            android:id="@+id/add_prop_to_database"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="288dp"
            android:text="@string/add_property"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/neighborhood_cap_rate_input" />

        <TextView
            android:id="@+id/titleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/title"
            android:fontFamily="monospace"
            android:text="@string/add_property_details"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/address_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:ems="15"
            android:hint="@string/Address"
            android:inputType="textPostalAddress"
            android:imeOptions="actionNext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleView" />

        <EditText
            android:id="@+id/renovation_budget_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="15"
            android:hint="@string/renovation_budget"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_input" />

        <EditText
            android:id="@+id/rent_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="15"
            android:hint="@string/total_monthly_rent"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/renovation_budget_input" />

        <EditText
            android:id="@+id/expense_ratio_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="15"
            android:hint="@string/expense_ratio_65_average"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rent_input" />

        <EditText
            android:id="@+id/neighborhood_cap_rate_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="15"
            android:hint="@string/neighborhood_cap_rate_08"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expense_ratio_input" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>